[package]
name = "armup"
version = "0.1.5"
edition = "2024"
description = "Install embedded Cortex-M tools on Windows"
license = "MIT"
readme = "README.md"
repository = "https://github.com/linkyourbin/armup"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
console = "0.16.3"
dialoguer = "0.12.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "stream", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
winreg = "0.56.0"
zip = "8.6.0"
